--- a/src/package.json
+++ b/src/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-winston": "^4.2.0",
     "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "pg": "^8.13.0",
     "sequelize": "^6.37.4",
     "winston": "^3.15.0"
