--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "sequelize": "^6.37.4",
     "winston": "^3.15.0"
