--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "express-winston": "^4.2.0",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
