--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "sequelize": "^6.37.4",
+    "uuidv4": "^6.2.13",
     "winston": "^3.15.0"
   },
   "devDependencies": {
