--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^9.12.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
