--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - run:
           name: SSH to VPS and pull Docker image
           command: |
-            ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_IP << 'EOF'
+            ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_IP \<< 'EOF'
               docker login -u "$DOCKER_PASSWORD" -p "$DOCKER_USERNAME"
               docker pull rifandye/muclone-image-hub:development
               docker stop mu-clone-development || true
@@ -51,7 +51,7 @@ jobs:
       - run:
           name: SSH to VPS and pull Docker image
           command: |
-            ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_IP << 'EOF'
+            ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_IP \<< 'EOF'
               docker login -u "$DOCKER_PASSWORD" -p "$DOCKER_USERNAME"
               docker pull rifandye/muclone-image-hub:production
               docker stop mu-clone-production || true
