--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - run:
           name: Push Docker image to Docker Hub
           command: |
+            echo "Building Docker image with tag: $IMAGE_TAG"
             docker push rifandye/muclone-image-hub:$IMAGE_TAG
 
   deploy-dev:
