--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,7 @@ jobs:
       - run:
           name: Push Docker image to Docker Hub
           command: |
-            docker push rifandye/muclone-image-hub:test
-
+            docker push rifandye/muclone-image-hub:$IMAGE_TAG
   deploy-dev:
     docker:
       - image: cimg/base:stable
