--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,10 @@ jobs:
             fi
             docker build -t rifandye/muclone-image-hub:$IMAGE_TAG ./src
       - run:
+          name: Tag Docker image
+          command: |
+            docker tag rifandye/muclone-image-hub:$IMAGE_TAG rifandye/muclone-image-hub:$IMAGE_TAG
+      - run:
           name: Push Docker image to Docker Hub
           command: |
             docker push rifandye/muclone-image-hub:$IMAGE_TAG
