--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,12 @@ jobs:
       - run:
           name: Tag Docker image
           command: |
+            echo "Tagging the image: rifandye/muclone-image-hub:$IMAGE_TAG"
             docker tag rifandye/muclone-image-hub:$IMAGE_TAG rifandye/muclone-image-hub:$IMAGE_TAG
       - run:
           name: Push Docker image to Docker Hub
           command: |
+            echo "Pushing Docker image with tag: rifandye/muclone-image-hub:$IMAGE_TAG"
             docker push rifandye/muclone-image-hub:$IMAGE_TAG
   deploy-dev:
     docker:
