--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
             else
               IMAGE_TAG="development";
             fi
+            echo "IMAGE_TAG is set to: $IMAGE_TAG"
             docker build -t rifandye/muclone-image-hub:$IMAGE_TAG ./src
       - run:
           name: Tag Docker image
