--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     docker:
      - image: circleci/node:16.13-browsers
+    environment:
+      IMAGE_TAG: ""
     steps:
       - checkout:
           path: ~/project
