--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,16 @@ jobs:
               IMAGE_TAG="development";
             fi
             echo "IMAGE_TAG is set to: $IMAGE_TAG"
-            docker build -t rifandye/muclone-image-hub:$IMAGE_TAG ./src
+            docker build \
+              --build-arg PORT=$PORT \
+              --build-arg NODE_ENV=$IMAGE_TAG \
+              --build-arg DB_USERNAME=$DB_USERNAME \
+              --build-arg DB_PASSWORD=$DB_PASSWORD \
+              --build-arg DB_NAME=$DB_NAME \
+              --build-arg DB_HOST=$DB_HOST \
+              --build-arg JWT_SECRET=$JWT_SECRET \
+              --build-arg ALLOWED_ORIGINS=$ALLOWED_ORIGINS \
+              -t rifandye/muclone-image-hub:$IMAGE_TAG ./src
       - run:
           name: Push Docker image to Docker Hub
           command: |
@@ -47,7 +56,6 @@ jobs:
           name: SSH to VPS and pull Docker image
           command: |
             ssh -o StrictHostKeyChecking=no -p $VPS_PORT $VPS_USER@$VPS_IP \<< 'EOF'
-              echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
               docker pull rifandye/muclone-image-hub:development
               docker ps -a --filter "name=mu-clone-development" -q | grep -q . && \
               docker stop mu-clone-development && docker rm mu-clone-development || true
@@ -62,7 +70,6 @@ jobs:
           name: SSH to VPS and pull Docker image
           command: |
             ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_IP \<< 'EOF'
-              echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
               docker pull rifandye/muclone-image-hub:production
               docker stop mu-clone-production || true
               docker rm mu-clone-production || true
