--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
               fi
             echo "Pushing Docker image with tag: rifandye/muclone-image-hub:$IMAGE_TAG"
             docker push rifandye/muclone-image-hub:$IMAGE_TAG
-  deploy-dev:
+    deploy-dev:
     docker:
       - image: cimg/base:stable
     steps:
@@ -59,10 +59,19 @@ jobs:
               docker pull rifandye/muclone-image-hub:development
               docker ps -a --filter "name=mu-clone-development" -q | grep -q . && \
               docker stop mu-clone-development && docker rm mu-clone-development || true
-              docker run -d --name mu-clone-development --network Runestone-Network -p 8001:3001 rifandye/muclone-image-hub:development
+              docker run -d --name mu-clone-development \
+                --network Runestone-Network \
+                -p 8001:3001 \
+                -e DB_USERNAME=$DB_USERNAME \
+                -e DB_PASSWORD=$DB_PASSWORD \
+                -e DB_NAME=$DB_NAME \
+                -e DB_HOST=$DB_HOST \
+                -e JWT_SECRET=$JWT_SECRET \
+                -e ALLOWED_ORIGINS=$ALLOWED_ORIGINS \
+                rifandye/muclone-image-hub:development
             EOF
 
-  deploy-prod:
+    deploy-prod:
     docker:
       - image: cimg/base:stable
     steps:
@@ -73,9 +82,16 @@ jobs:
               docker pull rifandye/muclone-image-hub:production
               docker stop mu-clone-production || true
               docker rm mu-clone-production || true
-              docker run -d --name mu-clone-production -p 8002:3002 rifandye/muclone-image-hub:production
+              docker run -d --name mu-clone-production \
+                -p 8002:3002 \
+                -e DB_USERNAME=$DB_USERNAME \
+                -e DB_PASSWORD=$DB_PASSWORD \
+                -e DB_NAME=$DB_NAME \
+                -e DB_HOST=$DB_HOST \
+                -e JWT_SECRET=$JWT_SECRET \
+                -e ALLOWED_ORIGINS=$ALLOWED_ORIGINS \
+                rifandye/muclone-image-hub:production
             EOF
-
 workflows:
   version: 2
   build-and-deploy:
