--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
                 -e DB_HOST=$DB_HOST \
                 -e JWT_SECRET=$JWT_SECRET \
                 -e ALLOWED_ORIGINS=$ALLOWED_ORIGINS \
-                -e PORT=$PORT \
+                -e PORT=3001 \
                 rifandye/muclone-image-hub:development
             EOF
 
@@ -80,7 +80,7 @@ jobs:
                 -e DB_HOST=$DB_HOST \
                 -e JWT_SECRET=$JWT_SECRET \
                 -e ALLOWED_ORIGINS=$ALLOWED_ORIGINS \
-                 -e PORT=$PORT \
+                -e PORT=3002 \
                 rifandye/muclone-image-hub:production
             EOF
 
