--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,15 @@ jobs:
           name: SSH to VPS and pull Docker image
           command: |
             ssh -o StrictHostKeyChecking=no -p $VPS_PORT $VPS_USER@$VPS_IP \<< 'EOF'
+
+              export DB_USERNAME="$DB_USERNAME"
+              export DB_PASSWORD="$DB_PASSWORD"
+              export DB_NAME="$DB_NAME"
+              export DB_HOST="$DB_HOST"
+              export JWT_SECRET="$JWT_SECRET"
+              export ALLOWED_ORIGINS="$ALLOWED_ORIGINS"
+              export PORT=3001
+
               docker pull rifandye/muclone-image-hub:development
               docker ps -a --filter "name=mu-clone-development" -q | grep -q . && \
               docker stop mu-clone-development && docker rm mu-clone-development || true
