--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,27 +45,22 @@ jobs:
           name: SSH to VPS and pull Docker image
           command: |
             ssh -o StrictHostKeyChecking=no -p $VPS_PORT $VPS_USER@$VPS_IP \<< 'EOF'
-              echo "DB_USERNAME=${DB_USERNAME}"
-              echo "DB_PASSWORD=${DB_PASSWORD}"
-              echo "DB_NAME=${DB_NAME}"
-              echo "DB_HOST=${DB_HOST}"
-              echo "JWT_SECRET=${JWT_SECRET}"
-              echo "ALLOWED_ORIGINS=${ALLOWED_ORIGINS}"
               docker pull rifandye/muclone-image-hub:development
               docker ps -a --filter "name=mu-clone-development" -q | grep -q . && \
               docker stop mu-clone-development && docker rm mu-clone-development || true
               docker run -d --name mu-clone-development \
                 --network Runestone-Network \
                 -p 8001:3001 \
-                -e DB_USERNAME="${DB_USERNAME}" \
-                -e DB_PASSWORD="${DB_PASSWORD}" \
-                -e DB_NAME="${DB_NAME}" \
-                -e DB_HOST="${DB_HOST}" \
-                -e JWT_SECRET="${JWT_SECRET}" \
-                -e ALLOWED_ORIGINS="${ALLOWED_ORIGINS}" \
+                -e DB_USERNAME="$DB_USERNAME" \
+                -e DB_PASSWORD="$DB_PASSWORD" \
+                -e DB_NAME="$DB_NAME" \
+                -e DB_HOST="$DB_HOST" \
+                -e JWT_SECRET="$JWT_SECRET" \
+                -e ALLOWED_ORIGINS="$ALLOWED_ORIGINS" \
                 -e PORT=3001 \
                 rifandye/muclone-image-hub:development
             EOF
+        context: MUClone-Dev-Context
 
   deploy-prod:
     docker:
@@ -89,7 +84,6 @@ jobs:
                 -e PORT=3002 \
                 rifandye/muclone-image-hub:production
             EOF
-
 workflows:
   version: 2
   build-and-deploy:
