--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,13 +51,7 @@ jobs:
               docker run -d --name mu-clone-development \
                 --network Runestone-Network \
                 -p 8001:3001 \
-                -e DB_USERNAME="$DB_USERNAME" \
-                -e DB_PASSWORD="$DB_PASSWORD" \
-                -e DB_NAME="$DB_NAME" \
-                -e DB_HOST="$DB_HOST" \
-                -e JWT_SECRET="$JWT_SECRET" \
-                -e ALLOWED_ORIGINS="$ALLOWED_ORIGINS" \
-                -e PORT=3001 \
+                --env-file /projects/.env.muclone \
                 rifandye/muclone-image-hub:development
             EOF
     context: MUClone-Dev-Context
