--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
               docker run -d --name mu-clone-development \
                 --network Runestone-Network \
                 -p 8001:3001 \
-                --env-file /home/rifandye/projects/.env.muclone \
+                --env-file /home/rifandye/projects/secrets/.env.muclone.dev \
                 rifandye/muclone-image-hub:development
             EOF
 
@@ -68,13 +68,7 @@ jobs:
               docker rm mu-clone-production || true
               docker run -d --name mu-clone-production \
                 -p 8002:3002 \
-                -e DB_USERNAME=$DB_USERNAME \
-                -e DB_PASSWORD=$DB_PASSWORD \
-                -e DB_NAME=$DB_NAME \
-                -e DB_HOST=$DB_HOST \
-                -e JWT_SECRET=$JWT_SECRET \
-                -e ALLOWED_ORIGINS=$ALLOWED_ORIGINS \
-                -e PORT=3002 \
+                --env-file /home/rifandye/projects/secrets/.env.muclone.prod \
                 rifandye/muclone-image-hub:production
             EOF
 workflows:
